--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
     <canvas id="canvas" width="800" height="800"></canvas>
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+        }
         canvas#canvas {
             border: 1px solid gray;
+            max-height: 100vh;
         }
     </style>
     <script src="maze.js"></script>
